getActiveClients sorted by price per hour